# study_talend

./: .gitignore  Makefile  README.md  docker-compose.yml  dockerfile  init.sql  kafka_cfg.py  kafka_consumer.py  kafka_producer.py  pyproject.toml  recycle_bin.index
code/routines/: DemoRoutine_4.0.item  DemoRoutine_4.0.properties  routine_test_0.1.item  routine_test_0.1.properties
components/: README.md
context/: C1_globalGroup_0.1.item  C1_globalGroup_0.1.properties  C1_mysql_with_context_0.1.item  C1_mysql_with_context_0.1.properties  fk_central_0.1.item  fk_central_0.1.properties  globalGroup_0.1.item  globalGroup_0.1.properties  global_4.0.item  global_4.0.properties  mysql_with_context_0.1.item  mysql_with_context_0.1.properties
data/in/: address1.csv  address2.csv  address3.csv  address4.csv  address5.csv  address6.csv.copy  address7.csv  address8.csv  address9.csv  country.json  customerData.csv  employee_data.xlsx  ipRanges.txt  labels.txt  meier.csv  pivot.csv  sales.csv  schemaCheck.csv  servers.txt  store.json
data/logs/: assert_file.txt  logs_file.txt  meter_file.txt  stats_file.txt
data/params/: assignment.ini  assignment.properties  context.csv  prePostJob_talend.properties
data/tmp/: file.tmp
data_c2/in/: lineitem.xml.small.xml  lineitem_small.xml
metadata/FTPconnections/: dlptest_4.0.item  dlptest_4.0.properties
metadata/GoogleDrive/: talendDrive_0.1.properties
metadata/connections/: mariadb_0.1.item  mariadb_0.1.properties  mysql_0.1.item  mysql_0.1.properties  (+9 more)
process/: templateJob_4.0.item  templateJob_4.0.properties
(+779 files in other folders)
